5643
These could be be given the type `scala.Singleton`, which is neither an `AnyRef` nor an `AnyVal`.
```scala
scala> implicitly[Singleton <:< Any]
res3: <:<[Singleton,Any] = <function1>

scala> implicitly[Singleton <:< AnyVal]
<console>:6: error: could not find implicit value for parameter e: <:<[Singleton,AnyVal]
       implicitly[Singleton <:< AnyVal]
                 ^

scala> implicitly[Singleton <:< AnyRef]
<console>:6: error: could not find implicit value for parameter e: <:<[Singleton,AnyRef]
       implicitly[Singleton <:< AnyRef]
                 ^
```

We would still need to disallow or fake `asInstanceOf`, `isInstanceOf`, `toString`, `==`, `##`.
